// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List described by Heading component should render a heading outside the list if one is provided 1`] = `
.emotion-1 {
  color: #3b3f45;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
  padding: 0;
}

.emotion-1 > .Nautilus-ListItem {
  list-style: none;
}

.emotion-1 > .Nautilus-ListItem::before {
  content: '\\2022';
  font-size: 0.6em;
  line-height: 2.8;
}

.emotion-0 {
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 600;
  font-size: 3.1rem;
  line-height: 1.2903225806451613;
}

dl + .emotion-0,
.Nautilus-List + .emotion-0,
.Nautilus-Paragraph + .emotion-0 {
  margin-top: 3.2rem;
}

<div>
  <h3
    class="emotion-0"
    data-testid="description"
    id="fruits"
  >
    Tasty fruits
  </h3>
  <ul
    aria-labelledby="fruits"
    class="Nautilus-List emotion-1"
  />
</div>
`;

exports[`List described by Paragraph component should render a paragraph outside the list if one is provided 1`] = `
.emotion-3 {
  color: #3b3f45;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
  padding: 0;
}

.emotion-3 > .Nautilus-ListItem {
  list-style: none;
}

.emotion-3 > .Nautilus-ListItem::before {
  content: '\\2022';
  font-size: 0.6em;
  line-height: 2.8;
}

.emotion-1 {
  position: relative;
  margin: 0 0 0.4rem;
}

.emotion-1::before {
  position: absolute;
  right: 101%;
}

.emotion-0 {
  color: #3b3f45;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
}

<div>
  <p
    class="Nautilus-Paragraph emotion-0"
    data-testid="description"
    id="cars"
  >
    Here are some cars:
  </p>
  <ul
    aria-labelledby="cars"
    class="Nautilus-List emotion-3"
  >
    <li
      class="Nautilus-ListItem emotion-1"
    >
      Honda Civic
    </li>
    <li
      class="Nautilus-ListItem emotion-1"
    >
      Ford Prefect
    </li>
  </ul>
</div>
`;

exports[`List should not output styles when unstyled is set 1`] = `
.emotion-0 {
  position: relative;
  margin: 0 0 0.4rem;
}

.emotion-0::before {
  position: absolute;
  right: 101%;
}

<div>
  <ul
    class="Nautilus-List emotion-2"
  >
    <li
      class="Nautilus-ListItem emotion-0"
      data-testid="one"
    >
      apple
    </li>
    <li
      class="Nautilus-ListItem emotion-0"
      data-testid="two"
    >
      raspberry
    </li>
  </ul>
</div>
`;
